--- a/学生管理系统test2/学生管理系统test2.vcxproj.filters
+++ b/学生管理系统test2/学生管理系统test2.vcxproj.filters
@@ -15,22 +15,11 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="学生管理系统test1.cpp">
+    <ClCompile Include="学生管理系统test2.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="CStudent.cpp">
+    <ClCompile Include="Student.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="CSystem.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="CStudent.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="CSystem.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
   </ItemGroup>
 </Project>
