--- a/学生管理系统test3/学生管理系统test3.vcxproj
+++ b/学生管理系统test3/学生管理系统test3.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{935321f9-1053-4cfd-b39a-94a374c78126}</ProjectGuid>
-    <RootNamespace>学生管理系统test1</RootNamespace>
+    <ProjectGuid>{d9f03211-eaa4-4c0d-a9fa-f3339ddd3cf2}</ProjectGuid>
+    <RootNamespace>学生管理系统test3</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,13 +139,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="CStudent.cpp" />
-    <ClCompile Include="CSystem.cpp" />
-    <ClCompile Include="学生管理系统test1.cpp" />
+    <ClCompile Include="Administer.cpp" />
+    <ClCompile Include="System.cpp" />
+    <ClCompile Include="UnderStudent.cpp" />
+    <ClCompile Include="学生管理系统test3.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CStudent.h" />
-    <ClInclude Include="CSystem.h" />
+    <ClInclude Include="Administer.h" />
+    <ClInclude Include="System.h" />
+    <ClInclude Include="UnderStudent.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
