--- a/学生管理系统test4/学生管理系统test4.vcxproj
+++ b/学生管理系统test4/学生管理系统test4.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{935321f9-1053-4cfd-b39a-94a374c78126}</ProjectGuid>
-    <RootNamespace>学生管理系统test1</RootNamespace>
+    <ProjectGuid>{61b43b8a-b87c-48dc-a7a0-9b0efe696c92}</ProjectGuid>
+    <RootNamespace>学生管理系统test4</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,13 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="CStudent.cpp" />
-    <ClCompile Include="CSystem.cpp" />
-    <ClCompile Include="学生管理系统test1.cpp" />
+    <ClCompile Include="student.cpp" />
+    <ClCompile Include="学生管理系统test4.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CStudent.h" />
-    <ClInclude Include="CSystem.h" />
+    <ClInclude Include="student.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
